--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@vitejs/plugin-vue": "^3.1.2",
         "@vue/compiler-sfc": "^3.2.40",
+        "laravel-echo": "^1.14.2",
+        "pusher-js": "^7.6.0",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0"
     }
