--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "midtrans/midtrans-php": "^2.5",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.7",
         "tightenco/ziggy": "^1.0"
