--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@vitejs/plugin-vue": "^3.1.2",
         "@vue/compiler-sfc": "^3.2.40",
+        "dotenv": "^16.0.3",
         "laravel-echo": "^1.14.2",
         "pusher-js": "^7.6.0",
         "vue": "^3.2.36",
-        "vue-loader": "^17.0.0"
+        "vue-loader": "^17.0.0",
+        "vue-moment": "^4.1.0"
     }
 }
