--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "dotenv": "^16.0.3",
         "laravel-echo": "^1.14.2",
         "pusher-js": "^7.6.0",
+        "qrcode.vue": "^3.3.3",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0",
-        "vue-moment": "^4.1.0"
+        "vue-moment": "^4.1.0",
+        "vue-qrcode": "^2.2.0"
     }
 }
